added some styling

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div class="img-bg container-fluid">
+<div class="img-bg container-fluid text-white">
     <div class="content container d-flex justify-content-center align-items-center">
         <div class="content-box my-5 text-center">
             <form id="search-form">
