added some styling

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
                 <input class="form-control blurry-bg rounded-5" type="text" id="cityName" name="cityName">
                 <button class="btn btn-outline-secondary" type="submit">Wetter abrufen</button>
             </form>
-            <div class="display-weather blurry-bg rounded-5 p-4">
+            <div id="weather-information-box" class="display-weather blurry-bg rounded-5 p-4 d-none">
                 <div id="weatherDisplayError"></div>
                 <div id="weatherDisplay"></div>
                 <div id="forecastDisplay"></div>
