Made some minor app changes

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,^ initial-scale=1.0">
     <link href="assets/css/main.css" rel="stylesheet">
 
     <title>Wetteranwendung</title>
@@ -12,10 +12,9 @@
 <div class="img-bg container-fluid text-white">
     <div class="content container d-flex justify-content-center align-items-center">
         <div class="content-box my-5 text-center">
-            <form id="search-form">
-                <label for="cityName">Stadt:</label>
-                <input class="form-control blurry-bg rounded-5" type="text" id="cityName" name="cityName">
-                <button class="btn btn-outline-secondary" type="submit">Wetter abrufen</button>
+            <form id="search-form" class="mb-2 position-relative">
+                <input class=" blurry-bg border-0 rounded-5 p-3 w-100" type="text" id="cityName" placeholder="Ort eingeben" name="cityName">
+                <button class="position-absolute btn btn-search" type="submit"><i class="bi bi-search"></i></button>
             </form>
             <div id="weather-information-box" class="display-weather blurry-bg rounded-5 p-4 d-none">
                 <div id="weatherDisplayError"></div>
